--- a/Project_1/templates/images.html
+++ b/Project_1/templates/images.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NyxChat</title>
+    <title>PacketPalChat</title>
     <link rel="stylesheet" href="{{url_for('static', filename='css/styles.css')}}" />
     <link rel= "SHORTCUT ICON" href= "{{url_for('static', filename='images/logo1.svg')}}" >
   </head>
@@ -18,15 +18,15 @@
           <a href = "/images" ><button class="sidebar-button-main">Images</button></a>
         </div>
         <div style="margin-top:auto; text-align:center;" > 
-            <hr>
-            <a href="https://www.udemy.com/user/yogesh-raheja/" target="_blank" style="color:white; margin-bottom:4px; font-weight:4; text-decoration:none;" >Thinknyx Udemy Courses</a>
-            <hr>
-            <a href="https://www.thinknyx.com/blog/" target="_blank" style="color:white; margin-bottom:4px; font-weight:4; text-decoration:none;">Blogs</a>
-            <hr>
-            <a href="https://tap.thinknyx.com/" target="_blank" style="color:white; margin-bottom:4px; font-weight:4; text-decoration:none;">Assessment Platform (TAP)</a>
-            <hr>
-            <a href="https://www.thinknyx.com/" target="_blank" style="color:white; margin-bottom:4px; font-weight:4; text-decoration:none;">About Us</a>
-            <hr>
+           <hr>
+           <a href="https://help.genesys.cloud/" target="_blank" style="color:white; margin-bottom:4px; font-weight:4; text-decoration:none;" >Genesys Resource Center</a>
+           <hr>
+           <a href="https://cloud.google.com/blog/products/networking" target="_blank" style="color:white; margin-bottom:4px; font-weight:4; text-decoration:none;">Blogs</a -->
+           <hr>
+           <!--a href="https://" target="_blank" style="color:white; margin-bottom:4px; font-weight:4; text-decoration:none;">Assessment Platform (TAP)</a -->
+           <hr>
+           <!--a href="https://" target="_blank" style="color:white; margin-bottom:4px; font-weight:4; text-decoration:none;">About Us</a -->
+           <hr>
           
         </div>
         
@@ -68,4 +68,5 @@
 
   </body>
 </html>
+
 
